# rust_todo_app

./: .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  README.md  Trunk.toml  build.nu  docker-compose.yml  rustfmt.toml  tailwind.config.js
.cargo/: Config.toml
app/: Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf  tailwind.config.js  tailwind.css
app/css/: input.css  output.css
app/src/: main.rs
app/src/components/: counter.rs  mod.rs  rawhtml.rs  task_component.rs  task_form.rs  task_list.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs  tests.rs
share/: Cargo.toml
share/src/: lib.rs
share/src/utils/: mod.rs  structs.rs
src/: prelude.rs
src/utils/: structs.rs
