[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
yew = { version = "0.21.0", features = ["csr"] }
yew_rocket = { path = ".." }
yew-router = "0.18.0"
gloo-net = "0.4.0"
wasm-bindgen = "0.2.88"
wasm-logger = "0.2.0"
log = "0.4.20"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.38"
