[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
yew_rocket = { path = ".." }
rocket = "0.5.0"
serde_json = "1.0.108"
rocket_cors = "0.6.0"
