[package]
name = "shared_lib"
version = "0.1.0"
edition = "2021"
# build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
rand = "0.8.4"
js-sys = "0.3.65"

[workspace]
members = ["app", "server"]
default-members = ["server"]
